# GrowPi

./: .gitignore  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  Notes.md  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/growpi/: __init__.py  api.py  cli.py  main.py  sensor_check.py  sensors.json
src/growpi/sensors/: am2301.py  am2302.py  co2Dummy.py  ds18b20.py  ecDummy.py  lm393.py  phDummy.py  sensor_factory.py  sensor_interface.py
src/growpi/utils/: now.py
tests/: __init__.py  test_am2301.py  test_am2302.py  test_co2Dummy.py  test_ds18b20.py  test_ecDummy.py  test_growpi.py  test_lm393.py  test_main.py  test_phDummy.py  test_sensor_factory.py
tests/mocks/: mock_am2301.py
